--- a/style.css
+++ b/style.css
@@ -1,36 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:wght@300&display=swap');
 
 /* Form container */
-.container {
-    width: auto;
-    max-width: 900px;
-    padding: 20px 30px;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.4);
-    box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2) 
-}
-.input-field-container {
-    
-    display: flex;
-    flex-direction: column;
-}
 .form-container {
-    margin-top: 40px;
     width: auto;
-    height: 50vh;
+    height: auto;
+    padding: 30px 80px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.65);
+    box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
 
-h2 {
-    text-align: center;
+.button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-label {
-    margin: 10px;
-    text-align: left;
-}
-input {
-    padding: 10px;
+.button{
+    margin: 30px 0px;
+    width: 80%;
+    max-height: fit-content;
+    font-size: 1.2rem;
+    padding: 0.875rem 2.5rem;
+    border: 1px solid rgb(82 163 80);
     border-radius: 10px;
+    background: rgb(82 163 80);
+    color: rgb(255, 255, 255);
+    cursor: pointer;
 }
+.button:disabled{
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+.button:hover {
+    background: rgb(255, 255, 255);
+    color: rgb(82 163 80);
+}
+h2 {
+    padding: 50px 0px;
+    
+}
+
 body {
     margin: 0;
     color: #000;
@@ -38,10 +47,10 @@ body {
     min-height: 100vh;
     background-color: #ffffff;
     font-weight: 500;
-    text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-image: url("data:image/svg+xml,%3Csvg width='80' height='80' viewBox='0 0 80 80' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%2352a350' fill-opacity='0.08'%3E%3Cpath d='M50 50c0-5.523 4.477-10 10-10s10 4.477 10 10-4.477 10-10 10c0 5.523-4.477 10-10 10s-10-4.477-10-10 4.477-10 10-10zM10 10c0-5.523 4.477-10 10-10s10 4.477 10 10-4.477 10-10 10c0 5.523-4.477 10-10 10S0 25.523 0 20s4.477-10 10-10zm10 8c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm40 40c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 @media  screen and (max-width: 1000px) {
